--- a/app/views/slurrystorage/current/intensive-farming-permit.html
+++ b/app/views/slurrystorage/current/intensive-farming-permit.html
@@ -27,7 +27,7 @@ Intensive farming permit
                   name: 'intensivepermit',
                   fieldset: {
                       legend: {
-                          text: 'Do you have an intensive farming permit?',
+                          text: 'Do you have an environmental permit for intensive farming?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -43,20 +43,9 @@ Intensive farming permit
                   text: "Yes",
                   checked: checked("intensivepermit", "Yes")
                 },
-
-                {
-                  value: "No, but I need one",
-                  text: "No, but I need one",
-                  checked: checked("intensivepermit", "No, but I need one")
-                },
-
-
-                {
-                  divider: "or"
-                },
                 {
                   value: "No",
-                  text: "No, my farm does not need an intensive farming permit",
+                  text: "No, my farm does not need an environmental permit for intensive farming",
                   checked: checked("intensivepermit", "No")
 
                 }
@@ -72,7 +61,7 @@ Intensive farming permit
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Environmental permit</span>
           </h2>
           <p class="govuk-body">You must have a permit from the Environment Agency (EA) to rear pigs intensively in an installation if you have more than:</p>
           <ul class="govuk-list govuk-list--bullet">
@@ -80,7 +69,7 @@ Intensive farming permit
           <li>750 places for sows</li>
           </ul>
 
-          <p class="govuk-body">You may need to apply for a change to your permit if you increase your slurry storage.</p>
+          <p class="govuk-body">You may need to apply for a variation to your environmental permit if you change your slurry storage.</p>
 
      </div>
    </div>
