--- a/app/views/slurrystorage/current/permit-variation.html
+++ b/app/views/slurrystorage/current/permit-variation.html
@@ -22,9 +22,9 @@
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="legal-status" method="post">
       <h1 class="govuk-heading-l">
-        You may need to apply for a change to your intensive farming permit</h1>
+        You may need to apply for a variation to your environmental permit</h1>
 
-      <p class="govuk-body">If you have an intensive farming permit, or plan to get one, you may need to apply for a change to your permit.<br><br>
+      <p class="govuk-body">
       This may be required if you are:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>applying to build a new store</li>
@@ -33,7 +33,7 @@
         </ul>
 
       {{ govukWarningText({
-        text: "You must have the change to your permit in place before you receive the final grant payment.",
+        text: "You must get your permit variation before you receive the final grant payment.",
         iconFallbackText: "Warning"
       }) }}
       <p><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
