--- a/app/views/slurrystorage/current/permit-variation.html
+++ b/app/views/slurrystorage/current/permit-variation.html
@@ -31,7 +31,9 @@
         <li>expanding or replacing an existing store</li>
         <li>covering an existing store</li>
         </ul>
-
+        <p class="govuk-body">You can use the Environment Agency’s (EA) pre-application advice service to
+        find out more or discuss this with your EA site officer.</p>
+        
       {{ govukWarningText({
         text: "You must get your permit variation before you receive the final grant payment.",
         iconFallbackText: "Warning"
