--- a/app/views/slurrystorage/current/project-responsibility.html
+++ b/app/views/slurrystorage/current/project-responsibility.html
@@ -25,29 +25,24 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will you take full responsibility for the 5-year project agreement?              </h1>
+                Will you take responsibility for the Grant Funding Agreement?</h1>
             </legend>
 
             <div class="govuk-radios govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length">
-                  Yes, I intend to take full responsibility for the project
+                  Yes, I plan to take full responsibility for meeting the terms and conditions in the Grant Funding Agreement
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="No, I have confirmed" {{ checked("tenancy-length", "No, I have confirmed") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
-                  No, I have confirmed with my landlord that they will underwrite my agreement
+                  No, I plan to ask my landlord to underwrite my Grant Funding Agreement
                 </label>
               </div>
-               <div class="govuk-radios__divider">or</div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length-3" name="tenancy-length" type="radio" value="No" {{ checked("tenancy-length", "No") }}>
-                <label class="govuk-label govuk-radios__label" for="tenancy-length-3">
-                  No
-                </label>
-              </div>
+
+
 
 
             </div>
@@ -65,9 +60,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>To receive grant funding, you will need to fulfil a 5-year agreement.<br><br>
+          <p>If you are awarded a grant, you will be issued with a Grant Funding Agreement. This lasts for 5 years after the date you receive your final grant payment.<br><br>
 
-          If you are unable to fulfil the agreement, you can agree with your landlord to underwrite it and take responsibility. For example, you could choose this option if you are on a short tenancy agreement.  </p>
+          If you think you might not be able to fulfil the full agreement, you can ask your landlord to countersign and underwrite the Grant Funding Agreement. For example, you could choose this option if you are on a short tenancy agreement.</p>
 
         <a href="#">
           </a>
