--- a/app/views/slurrystorage/current/tenancy.html
+++ b/app/views/slurrystorage/current/tenancy.html
@@ -69,7 +69,7 @@
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>If you are a tenant farmer, either you or your landlord can agree to take responsibility for the 5-year project agreement. </p>
+            <p>If you are a tenant farmer, either you or your landlord can take responsibility for the Grant Funding Agreement. </p>
             <a href="#">
             </a>
 
