--- a/app/views/slurrystorage/current/applying-for.html
+++ b/app/views/slurrystorage/current/applying-for.html
@@ -45,7 +45,7 @@ Applying for
                   },
                 {
                   value: "Cover",
-                  text: "An impermeable cover",
+                  text: "An impermeable cover only",
                   checked: checked("applyingfor", "Cover"),
                   hint: {
                     text: "To apply for a cover, you must have an existing store or stores that are fit for purpose"
