--- a/app/views/slurrystorage/current/existing-fit-for-purpose.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose.html
@@ -39,7 +39,7 @@ Cover for existing stores (Cow and Dairy)
                   },
 
                   hint: {
-                    text: "Your existing store must be signed off by a structural engineer by full application."
+                    text: "Your existing store must be signed off by a structural engineer at full application."
                     },
 
                   items: [
@@ -70,7 +70,7 @@ Cover for existing stores (Cow and Dairy)
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of leaks or failure.
+            <p>A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of leaks or failure. <br><br>To cover an existing store, you must confirm at full application that the store is structurally suitable to cover and meet regulations and build standards.
 
 
         </div>
