--- a/app/views/slurrystorage/current/os-grid.html
+++ b/app/views/slurrystorage/current/os-grid.html
@@ -41,7 +41,7 @@ Os grid
 
 
         {{ govukWarningText({
-          text: "You must provide an accurate grid reference to avoid delays at full application.",
+          text: "You must provide the correct location of your slurry store to avoid delays at full application.",
           iconFallbackText: "Warning"
         }) }}
 
