--- a/app/views/slurrystorage/current/project-responsibility.html
+++ b/app/views/slurrystorage/current/project-responsibility.html
@@ -25,20 +25,20 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will you take responsibility for the Grant Funding Agreement?</h1>
+                Are you planning to ask your landlord to underwrite your Grant Funding Agreement?</h1>
             </legend>
 
             <div class="govuk-radios govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
+                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="No" {{ checked("tenancy-length", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length">
-                  Yes, I plan to take full responsibility for meeting the terms and conditions in the Grant Funding Agreement
+                No, I plan to take full responsibility for meeting the terms and conditions in the Grant Funding Agreement
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="No, I have confirmed" {{ checked("tenancy-length", "No, I have confirmed") }}>
+                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
-                  No, I plan to ask my landlord to underwrite my Grant Funding Agreement
+                  Yes, I plan to ask my landlord to underwrite my Grant Funding Agreement
                 </label>
               </div>
 
