--- a/app/views/slurrystorage/current/cover-existing-stores.html
+++ b/app/views/slurrystorage/current/cover-existing-stores.html
@@ -69,9 +69,9 @@ Cover for existing stores (Cow and Dairy)
             </h2>
 
             {% if (data['farmertype'] == "Pig") %}
-            <p>You can use this grant to cover an existing store to increase the total storage capacity to 8 months.
+            <p>You can use this grant to cover an existing store to increase your total storage capacity to 8 months.
               {% else %}
-              <p>You can use this grant to cover an existing store to increase the total storage capacity to 6 months.
+              <p>You can use this grant to cover an existing store to increase your total storage capacity to 6 months.
                 {% endif %}
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
