--- a/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
@@ -23,7 +23,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
-    <p class="govuk-body">Your existing store must be signed off as fit for purpose by a structural engineer by full application.</p>
+    <p class="govuk-body">Your existing store must be signed off as fit for purpose by a structural engineer at full application.</p>
     <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
     </div>
 </div>
