Solar intervention specs

--- a/app/views/ahw/current/project-cost.html
+++ b/app/views/ahw/current/project-cost.html
@@ -30,33 +30,35 @@
           <div class="govuk-hint">
 
 
+
+
             You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £15,000 (40% of £37,500). The maximum grant is £500,000.<br><br>
-            {{ govukWarningText({
-              text: "You can use up to 40% of the total grant amount towards the cost of buying and installing rooftop solar PV panels.",
-              iconFallbackText: "Warning"
-            }) }}
 
-            For example, if the total grant amount is £100,000, you can use up to £40,000 of the grant for buying and installing rooftop solar PV panels.<br><br>
-            This grant is for:<br><br>
-            <ul class="govuk-list govuk-list--bullet govuk-hint"><li>structures, including concrete flooring, walls, roofs, structural reinforcement and drainage facilities</li>
-              <li>fixtures, including calf accommodation pens, calf isolation facilities, gates, draught protection, ventilation systems, washing facilities and automatic calf feeders</li>
-              <li>fittings, including temperature and humidity data loggers, heat lamps and enrichment items</li>
-              <li>one-off utility costs such as the alteration of electricity or water supply to allow the building installation or upgrade</li>
-              <li>buying and installing rooftop solar PV panels</li>
-
-              </ul>
-
-            <br/>Do not include VAT
+            Do not include VAT
           </div>
 
 
           <span class="govuk-caption-m">Enter amount, for example 95,000</span>
           <div class="govuk-input__wrapper govuk-!-margin-top-4">
-          <span  class="govuk-input__prefix" aria-hidden="true">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
+
+
+                                  {{ govukInput({
+                        id: "project-cost",
+                        name: "project-cost",
+                        prefix: {
+                        text: "£"
+                        },
+                        classes: "govuk-input--width-5",
+                        spellcheck: false
+                        }) }}
+
+
+
+
 
           </div>
         </div>
-        
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
 
@@ -64,19 +66,5 @@
       </form>
 
     </div>
-    <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">What the grant will not fund</span>
-          </h2>
-
-<p class="govuk-body">Movable items (for example buckets) and ongoing costs (for example straw) will not be funded.</p>
-
-
-
-
-
-        </div>
-      </div>
 {% endblock %}
