--- a/app/views/ahw/current/project-cost-fail2.html
+++ b/app/views/ahw/current/project-cost-fail2.html
@@ -15,7 +15,7 @@
   }) }}
 
 
-  <a class="govuk-back-link" href="project-cost">Back</a>
+  <a class="govuk-back-link" href="project-cost2">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -30,10 +30,15 @@
       <p>The minimum grant you can apply for the calf housing costs is £15,000 (40% of £37,500). The maximum grant is £500,000.</p>
     </div>
 
-{{ govukInsetText({
-    text: 'You can only apply for a grant of up to 40% of the estimated costs.'
-}) }}
 
+
+      {{ govukInsetText({
+          text: 'You cannot apply for funding for solar PV panels if you have not requested the minimum funding amount for calf housing.',
+          iconFallbackText: 'Warning'
+      }) }}
+
+<p class="govuk-body">
+You can only apply for a grant of up to 40% of the estimated costs.</p>
 <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
     </div>
