--- a/app/views/ahw/current/potential-grant-condition.html
+++ b/app/views/ahw/current/potential-grant-condition.html
@@ -24,14 +24,14 @@
       <h1 class="govuk-heading-l">
         You may be able to apply for a grant from this scheme
       </h1>
-<p class="govuk-body">You can only apply for a maximum grant of £500,000.</p>
-      {{ govukInsetText({
-          text: 'You cannot apply for funding for solar PV panels if you have requested the maximum funding amount for calf housing.',
+<p class="govuk-body">You have requested the maximum grant amount of £500,000 for calf housing.</p>
+      {{ govukWarningText({
+          text: 'You cannot apply for funding for a solar PV system if you have requested the maximum funding amount for calf housing.',
           iconFallbackText: 'Warning'
       }) }}
       <p class="govuk-body">You can continue to check your eligibility for grant funding to build or upgrade calf housing.</p>
 
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+        <button class="govuk-button " data-module="govuk-button">Continue</button>
 
 
 
