--- a/app/views/ahw/current/potential-grant2.html
+++ b/app/views/ahw/current/potential-grant2.html
@@ -39,8 +39,8 @@ Potential grant funding
 
             <p class="govuk-body">This grant amount combines:
               <ul class="govuk-list govuk-list--bullet">
-                <li>£15,000 for cattle housing costs (40% of £37,500)</li>
-                <li>£25,000 for solar PV costs (25% of £100,000)</li>
+                <li>£15,000 for calf housing costs (40% of £37,500)</li>
+                <li>£25,000 for a solar PV system costs (25% of £100,000)</li>
                 </ul>
 </p>
 
