--- a/app/views/ahw/current/potential-grant3.html
+++ b/app/views/ahw/current/potential-grant3.html
@@ -23,7 +23,7 @@ Potential grant funding
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l">
-      Potential grant funding 
+      Potential grant funding
     </h1>
 
     <p class="govuk-body">
@@ -38,16 +38,16 @@ Potential grant funding
 </p>
             {% endif %}
 
-          <p class="govuk-body">  Estimated calf housing costs have priority for grant funding. The grant amount you can apply for solar panels is £100,000. The maximum grant is £500,000.</p>
+
 
 
             <p class="govuk-body">This grant amount combines:
               <ul class="govuk-list govuk-list--bullet">
-                <li>£400,000 for cattle housing costs (40% of £1 million)</li>
-                <li>£100,000 for solar PV costs (25% of £500,000 capped at £100,000)</li>
+                <li>£400,000 for calf housing costs (40% of £1 million)</li>
+                <li>£100,000 for a solar PV system costs (25% of £500,000, capped at £100,000)</li>
                 </ul>
-</p>
-
+              </p>
+      <p class="govuk-body">As calf housing costs take grant funding priority, you may be able to apply for a grant of up to £100,000 for a solar PV system costs. The maximum grant is £500,000.</p>
 
     {{ govukWarningText({
         text: 'There’s no guarantee the project will receive a grant.',
