--- a/app/views/ahw/current/project-cost-fail2.html
+++ b/app/views/ahw/current/project-cost-fail2.html
@@ -33,13 +33,12 @@
 
 
       {{ govukInsetText({
-          text: 'You cannot apply for funding for solar PV panels if you have not requested the minimum funding amount for calf housing.',
+          text: 'You cannot apply for funding for a solar PV system if you have not requested the minimum funding amount for calf housing.',
           iconFallbackText: 'Warning'
       }) }}
 
-<p class="govuk-body">
-You can only apply for a grant of up to 40% of the estimated costs.</p>
-<p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
+
+<a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a>
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
     </div>
   </div>
