--- a/app/views/ahw/current/solar-pv.html
+++ b/app/views/ahw/current/solar-pv.html
@@ -28,13 +28,18 @@ Solar PV
                   name: 'solarpv',
                   fieldset: {
                       legend: {
-                          text: 'Will you use the grant for solar PV panels?',
+                          text: 'Will you buy a solar PV system with the grant?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
                   hint: {
-                    text: "You can choose to buy and install solar PV panels on the grant-funded calf housing as part of the grant."
+                    html: "You can choose to buy and install a solar PV system on the grant-funded calf housing as part of the grant.<br><br>A solar PV system can include:<br><br>
+                    <li>an electrical grid connection (your housing must have an existing energy supply)</li>
+                    <li>solar panels</li>
+                    <li>an inverter</li>
+                    <li>a utility meter</li>
+                    <li>a battery</li>"
                   },
                   items: [
                 {
@@ -63,9 +68,7 @@ Solar PV
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">You do not have to install solar PV panels to be eligible for the grant.<br><br>The roof of the grant-funded building must be able to support solar PV panels, allowing for potential use in the future.
-
-          </p>
+          <p class="govuk-body">You do not have to buy and install a solar PV system to be eligible for the grant.</p>
             </div>
    </div>
 
