--- a/app/views/ahw/current/project-cost2.html
+++ b/app/views/ahw/current/project-cost2.html
@@ -31,24 +31,16 @@
             <p class="govuk-body govuk-hint">You can apply for a grant of up to:
               <ul class="govuk-list govuk-list--bullet govuk-hint">
                 <li>40% of the estimated costs of calf housing</li>
-                <li>25% of the estimated costs of buying and installing solar PV panels</li>
+                <li>25% of the estimated costs of buying and installing a solar PV system</li>
                 </ul>
-</p>
-
-
-            The minimum grant you can apply for this project is £15,000 (40% of £37,500). The maximum grant is £500,000.<br><br>
-
+              </p>
+            The minimum grant amount you can apply for the calf housing costs is £15,000 (40% of £37,500). The maximum grant is £500,000.<br><br>
             Do not include VAT<br><br>
             Enter amount, for example 95,000<br>
 
           </div>
 
-
-
-
-
-
-                      {{ govukInput({
+            {{ govukInput({
             id: "calfhousing",
             name: "calfhousing",
             label: {
@@ -67,7 +59,7 @@
             id: "solar-pv",
             name: "solar-pv",
             label: {
-              text: "Buying and installing solar PV panels",
+              text: "Buying and installing a solar PV system",
               classes: "govuk-label--s"
             },
             prefix: {
