--- a/app/views/ahw/current/reference-number.html
+++ b/app/views/ahw/current/reference-number.html
@@ -51,7 +51,7 @@
 
 <p class="govuk-heading-m">What happens next</p>
 <ol class="govuk-list govuk-list--number govuk-list--spaced">
-  <li>RPA will be in touch when the full application period opens to tell you if your project is invited to submit a full application form.</li>
+  <li>RPA will be in touch when the full application period opens to tell you if your project is invited to submit a full application. This will include an initial assessmentof the ambient environment.</li>
   <li>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</li>
   <li>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</li>
 </ol>
