--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -16,17 +16,17 @@
   Calf Housing for Health and Welfare Grant prototype admin
 </h1>
 
-      
+
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2><br>
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 5.3 (private beta) - current</strong></a><br>
-          <span class="govuk-body govuk-!-font-size-14">#Last updated on 15 July 2023
+          <span class="govuk-body govuk-!-font-size-14">#Last updated on 3 August 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
-              <li><strong>15 July 2023</strong>: Iterations (Issues 128 to 141 from Confluence) is now taken forward into Private beta.</li>
+              <li><strong>3 August 2023</strong>: Iterations (Issues 128 to 150 from Confluence) is now taken forward into Private beta. Latest changes around Solar intervention rate needs testing.</li>
               </ul>
               </p>
 
