--- a/app/views/ahw/current/project-cost.html
+++ b/app/views/ahw/current/project-cost.html
@@ -49,6 +49,7 @@
                         text: "£"
                         },
                         classes: "govuk-input--width-5",
+                        value: data['project-cost'],
                         spellcheck: false
                         }) }}
 
