--- a/app/views/ahw/current/potential-grant.html
+++ b/app/views/ahw/current/potential-grant.html
@@ -28,8 +28,9 @@ Potential grant funding
 
     <p class="govuk-body">
 
-      {% set grantAmount = data['project-cost'] *0.4 %}
+
       {% set projectCost = data['project-cost'] %}
+      {% set grantAmount = data['project-cost'] *0.4 %}
         {% if projectCost >=1250001 %}
         <p class="govuk-body">You may be able to apply for a grant of up to £500,000, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
 
@@ -56,3 +57,11 @@ Potential grant funding
 </div>
 
 {% endblock %}
+<p class="govuk-body">Based on the standardised grant amount for each item and the approximate <br>size and quantities you entered, we estimate you could be eligible for <br>a grant of
+
+  {# Putting a rule to cap grant amount at 250,000 when the value goes over maximum grant amount of 250K #}
+  {% if data['potentialgrant'] >= 250000 %}
+    £250,000.</p>
+  {% else %}
+    £{{ data['potentialgrant']| toFixed(2) | commafy  }}.</p>
+  {% endif %}
